--- a/NewsPortal/templates/posts.html
+++ b/NewsPortal/templates/posts.html
@@ -1,12 +1,33 @@
 {% extends 'flatpages/default.html' %} {% load custom_filters %}
+{% load custom_tags %}
 <!>
 {% block title%} Posts {% endblock title %} {% block content %}
 <h1>Все посты в колличестве {{ posts| length }}</h1>
 
+
 {% if posts %} {% for post in posts %}
-<p>{{ post.topic }} {{ post.public_date|date:'d M Y' }}</p>
+<p><h2>{{ post.topic }}</h2> {{ post.public_date|date:'d M Y' }}</p>
 <p>{{ post.content|truncatewords:20 }}</p>
 {% endfor %} {% else %}
 
 <h2>Постов нет!</h2>
-{% endif %} {% endblock content %}
+{% endif %}
+{% if page_obj.has_previous %}
+{# Для каждой ссылки пагинации указываем обработку через новый тег #}
+    <a href="?{% url_replace page=1 %}">1</a>
+{% if page_obj.previous_page_number != 1 %}
+    ...
+    <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+{% endif %}
+{% endif %}
+
+{{ page_obj.number }}
+
+{% if page_obj.has_next %}
+<a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+{% if paginator.num_pages != page_obj.next_page_number %}
+    ...
+    <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+{% endif %}
+{% endif %}
+{% endblock content %}
